# SerEx

./: CMakeLists.txt  README.md
cmake/: SerExConfig.cmake.in
src/SerEx/: archive.cpp  boolean.cpp  encoding.cpp  enum.cpp  number.cpp  numbers.cpp  pointer.cpp  polymorphic.cpp  serex.cpp  serialize.cpp  string.cpp  tuple.cpp  vector.cpp
tests/: CMakeLists.txt  test_serialize_bool.cpp  test_serialize_enum.cpp  test_serialize_inherit_polymorphic.cpp  test_serialize_inherit_standard.cpp  test_serialize_int.cpp  test_serialize_objects.cpp  test_serialize_pointers.cpp  test_serialize_string.cpp  test_serialize_tuple.cpp  test_serialize_unique_ptr.cpp  test_serialize_vector.cpp
